Remove cachedTextBlob lookup in Font::getTextIntercepts

This doesn't do anything since the callsite creates a new
TextRunPaintInfo every time.

BUG=689578

Review-Url: https://codereview.chromium.org/2679213002
Cr-Commit-Position: refs/heads/master@{#448874}

Former-commit-id: 16f3d2401ca5d2e68d956507a86d57fb3b60d350